# zk-passport-emrtd-lib

./: .gitignore  .npmignore  Cargo.toml  analyse.py  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
assets/: masterlist_284.json
cli/: Cargo.toml
cli/src/: bundle.rs  main.rs  masterlist.rs  mock_alt.rs
core/: Cargo.toml
core/src/: bundle.rs  bundle_mock.rs  bundle_mock_alt.rs  bundle_mock_master.rs  bundle_signature.rs  bundle_verify.rs  common.rs  dg1.rs  digest.rs  document_components.rs  lib.rs  master_certs.rs  mock.rs  pubkeys.rs  pubkeys_pure.rs  rsa_message_template.rs
npm/darwin-universal/: README.md
npm/linux-arm-musleabihf/: README.md
npm/linux-riscv64-gnu/: README.md
pkcs/: Cargo.toml
pkcs/src/: copied.rs  main.rs
pss/: Cargo.toml
pss/src/: main.rs  pss.rs
pss/tests/: pss_integration.rs
src/: bundle.rs  bundle_mock.rs  bundle_verify.rs  cert_local.rs  dg1.rs  document_components.rs  lds.rs  lib.rs  main.rs  master_certs.rs  mock.rs  mock_bundle.rs  open.rs  parse_ldif.rs  parse_scan.rs  pubkeys.rs  signed_attrs.rs
