[package]
name = "zk-passport-emrtd-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
asn1-rs = "0.6.2"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
cms = { version = "0.2.3", features = ["pem", "std"] }
color-eyre = "0.6.3"
const-oid = { version = "0.9.6", features = ["std"] }
der = { version = "0.7.9", features = ["std", "pem", "derive", "oid"] }
digest = { version = "0.10.7", features = ["std", "oid"] }
ecdsa = { version = "0.16.9", features = ["der", "std"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "std"] }
k256 = { version = "0.13.4", features = ["ecdsa"] }
p224 = "0.13.2"
p256 = "0.13.2"
p384 = "0.13.0"
p521 = { version = "0.13.3", features = ["ecdsa"] }
pem = "3.0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["json", "base64"] }
sha2 = { version = "0.10.8", features = ["oid"] }
smallvec = "1.13.2"
spki = { version = "0.7.3", features = ["std"] }
