[package]
name = "zk-passport-emrtd"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
color-eyre = "0.6.3"
emrtd-core = { path = "./core" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.12.0", features = ["json", "base64"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[workspace]
members = ["core", "cli"]
resolver = "2"
