[package]
name = "emrtd-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
emrtd-core = { path = "../core" }
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["json", "base64"] }
toml = "0.8.19"
base64 = "0.22.1"
sha2 = "0.10.8"
