[package]
name = "emrtd-core"
version = "0.1.0"
edition = "2021"

[dependencies]
asn1-rs = "0.6.2"
base64 = "0.22.1"
cms = { version = "0.2.3", features = ["pem", "std"] }
color-eyre = "0.6.3"
const-oid = { version = "0.9.6", features = ["std"] }
der = { version = "0.7.9", features = ["std", "pem", "derive", "oid"] }
digest = { version = "0.10.7", features = ["std", "oid"] }
ecdsa = { version = "0.16.9", features = ["der", "std"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "std"] }
# hex = "0.4.3"
itertools = "0.13.0"
k256 = "0.13"
num-bigint-dig = { version = "0.8.4", features = ["serde"] }
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-sys = { version = "0.9.104", features = ["vendored"] }
p224 = "0.13"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13.3"
# pem = "3.0.4"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pkcs5", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", features = ["json", "base64"] }
sha2 = { version = "0.10.8", features = ["oid"] }
smallvec = { version = "1.13.2", features = ["serde"] }
spki = { version = "0.7.3", features = ["std"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
